Fix gap between table header and contents

--- a/options/options.css
+++ b/options/options.css
@@ -1,3 +1,6 @@
+body * {
+    box-sizing: border-box;
+}
 .section {
     border-bottom: 1px solid;
 }
@@ -38,7 +41,6 @@ ul.tab:after {
 }
 
 .hint-pattern-global-selector {
-    box-sizing: border-box;
     width: 100%;
     height: 4em;
 }
